--- a/app/templates/role_modal.html
+++ b/app/templates/role_modal.html
@@ -6,13 +6,14 @@
       <input type="hidden" id="edit-role-log-id" name="log_id" />
       <table class="form-table">
         <tr>
-          <td><label>Role:</label></td>
+          <td><span style="font-weight: 600;">Role:</span></td>
           <td><span id="role-name-display"></span></td>
         </tr>
         <tr>
           <td><label for="edit-current-path-level">Path & Level:</label></td>
           <td>
-            <input type="text" id="edit-current-path-level" name="project_code" placeholder="e.g., PM1, EH3..." />
+            <input type="text" id="edit-current-path-level" name="project_code" placeholder="e.g., PM1, EH3..."
+              autocomplete="off" />
           </td>
         </tr>
       </table>
