--- a/app/templates/_role_modal.html
+++ b/app/templates/_role_modal.html
@@ -28,60 +28,30 @@
           <td><input type="text" id="award_category" name="award_category" /></td>
         </tr>
         <tr>
-          <td colspan="2" style="text-align: center; padding-top: 15px">
-            <label
-              for="needs_approval"
-              style="display: inline-block; margin-right: 15px"
-              >Needs Approval:</label
-            >
-            <input
-              type="checkbox"
-              id="needs_approval"
-              name="needs_approval"
-              style="transform: scale(1.2)"
-            />
+          <td colspan="2" style="padding-top: 15px">
+            <div
+              style="display: flex; flex-wrap: nowrap; gap: 20px; justify-content: center; align-items: center; width: 100%;">
+              <label style="display: flex; align-items: center; gap: 5px; white-space: nowrap; font-size: 0.9em;">
+                <span style="font-weight: normal;">Needs Approval:</span>
+                <input type="checkbox" id="needs_approval" name="needs_approval" style="transform: scale(1.1)" />
+              </label>
 
-            <label
-              for="is_distinct"
-              style="
-                display: inline-block;
-                margin-left: 30px;
-                margin-right: 15px;
-              "
-              >Is Distinct:</label
-            >
-            <input
-              type="checkbox"
-              id="is_distinct"
-              name="is_distinct"
-              style="transform: scale(1.2)"
-            />
+              <label style="display: flex; align-items: center; gap: 5px; white-space: nowrap; font-size: 0.9em;">
+                <span style="font-weight: normal;">Is Distinct:</span>
+                <input type="checkbox" id="is_distinct" name="is_distinct" style="transform: scale(1.1)" />
+              </label>
 
-            <label
-              for="is_member_only"
-              style="
-                display: inline-block;
-                margin-left: 30px;
-                margin-right: 15px;
-              "
-              >Is Member Only:</label
-            >
-            <input
-              type="checkbox"
-              id="is_member_only"
-              name="is_member_only"
-              style="transform: scale(1.2)"
-            />
+              <label style="display: flex; align-items: center; gap: 5px; white-space: nowrap; font-size: 0.9em;">
+                <span style="font-weight: normal;">Member Only:</span>
+                <input type="checkbox" id="is_member_only" name="is_member_only" style="transform: scale(1.1)" />
+              </label>
+            </div>
           </td>
         </tr>
       </table>
       <div class="form-actions">
         <button type="submit" class="btn btn-primary">Save Role</button>
-        <button
-          type="button"
-          class="btn btn-danger"
-          onclick="closeModal('addRoleModal')"
-        >
+        <button type="button" class="btn btn-danger" onclick="closeModal('addRoleModal')">
           Cancel
         </button>
       </div>
