create a fix_role_levels.py script

--- a/app/templates/_contact_modal.html
+++ b/app/templates/_contact_modal.html
@@ -43,7 +43,7 @@
             <tr>
             <td><label for="club">Club:</label></td>
             <td>
-                <input type="text" id="club" name="club" placeholder="e.g., Club1/Club2" />
+                <input type="text" id="club" name="club" placeholder="-" />
             </td>
             </tr>
             <tr>
